--- a/03-model-logistic-regression.ipynb
+++ b/03-model-logistic-regression.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,9 +61,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('feature_extraction',\n",
+       "                 ColumnTransformer(transformers=[('interarrival_scaler',\n",
+       "                                                  Pipeline(steps=[('median_imputer',\n",
+       "                                                                   SimpleImputer(strategy='median')),\n",
+       "                                                                  ('interarrival_scaler',\n",
+       "                                                                   RobustScaler())]),\n",
+       "                                                  ['interarrival']),\n",
+       "                                                 ('amount_scaler',\n",
+       "                                                  RobustScaler(), ['amount']),\n",
+       "                                                 ('onehot',\n",
+       "                                                  OneHotEncoder(categories=[['online',\n",
+       "                                                                             'contactless',\n",
+       "                                                                             'chip_and_pin',\n",
+       "                                                                             'manual',\n",
+       "                                                                             'swipe']],\n",
+       "                                                                handle_unknown='ignore'),\n",
+       "                                                  ['trans_type']),\n",
+       "                                                 ('m_hashing',\n",
+       "                                                  Pipeline(steps=[('dictify',\n",
+       "                                                                   FunctionTransformer(accept_sparse=True,\n",
+       "                                                                                       func=<function amap at 0x7fec41fcdf70>)),\n",
+       "                                                                  ('hasher',\n",
+       "                                                                   FeatureHasher(n_features=256))]),\n",
+       "                                                  'merchant_id')]))])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "feature_pipeline"
    ]
@@ -91,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,9 +153,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(max_iter=500)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "lr = LogisticRegression(max_iter=500)\n",
@@ -140,9 +185,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       fraud       0.15      0.92      0.26     11424\n",
+      "  legitimate       1.00      0.90      0.95    613576\n",
+      "\n",
+      "    accuracy                           0.90    625000\n",
+      "   macro avg       0.57      0.91      0.60    625000\n",
+      "weighted avg       0.98      0.90      0.94    625000\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import classification_report\n",
     "\n",
@@ -161,9 +222,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div id=\"altair-viz-3ebcfd7deba64ad796dee9c624b2ffb8\"></div>\n",
+       "<script type=\"text/javascript\">\n",
+       "  (function(spec, embedOpt){\n",
+       "    let outputDiv = document.currentScript.previousElementSibling;\n",
+       "    if (outputDiv.id !== \"altair-viz-3ebcfd7deba64ad796dee9c624b2ffb8\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-3ebcfd7deba64ad796dee9c624b2ffb8\");\n",
+       "    }\n",
+       "    const paths = {\n",
+       "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
+       "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
+       "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@4.8.1?noext\",\n",
+       "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n",
+       "    };\n",
+       "\n",
+       "    function loadScript(lib) {\n",
+       "      return new Promise(function(resolve, reject) {\n",
+       "        var s = document.createElement('script');\n",
+       "        s.src = paths[lib];\n",
+       "        s.async = true;\n",
+       "        s.onload = () => resolve(paths[lib]);\n",
+       "        s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
+       "        document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
+       "      });\n",
+       "    }\n",
+       "\n",
+       "    function showError(err) {\n",
+       "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
+       "      throw err;\n",
+       "    }\n",
+       "\n",
+       "    function displayChart(vegaEmbed) {\n",
+       "      vegaEmbed(outputDiv, spec, embedOpt)\n",
+       "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
+       "    }\n",
+       "\n",
+       "    if(typeof define === \"function\" && define.amd) {\n",
+       "      requirejs.config({paths});\n",
+       "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
+       "    } else if (typeof vegaEmbed === \"function\") {\n",
+       "      displayChart(vegaEmbed);\n",
+       "    } else {\n",
+       "      loadScript(\"vega\")\n",
+       "        .then(() => loadScript(\"vega-lite\"))\n",
+       "        .then(() => loadScript(\"vega-embed\"))\n",
+       "        .catch(showError)\n",
+       "        .then(() => displayChart(vegaEmbed));\n",
+       "    }\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-c6e47ddc235ee3c41806b199fe02d222\"}, \"mark\": \"rect\", \"encoding\": {\"color\": {\"type\": \"quantitative\", \"field\": \"value\"}, \"tooltip\": [{\"type\": \"quantitative\", \"field\": \"raw_count\"}], \"x\": {\"type\": \"ordinal\", \"field\": \"predicted\"}, \"y\": {\"type\": \"ordinal\", \"field\": \"actual\"}}, \"height\": 215, \"width\": 215, \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.8.1.json\", \"datasets\": {\"data-c6e47ddc235ee3c41806b199fe02d222\": [{\"predicted\": \"fraud\", \"actual\": \"fraud\", \"raw_count\": 10456, \"value\": 0.915266106442577}, {\"predicted\": \"fraud\", \"actual\": \"legitimate\", \"raw_count\": 968, \"value\": 0.08473389355742297}, {\"predicted\": \"legitimate\", \"actual\": \"fraud\", \"raw_count\": 58952, \"value\": 0.09607937728985488}, {\"predicted\": \"legitimate\", \"actual\": \"legitimate\", \"raw_count\": 554624, \"value\": 0.9039206227101452}]}}, {\"mode\": \"vega-lite\"});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "alt.Chart(...)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from mlworkflows import plot\n",
     "df, chart = plot.binary_confusion_matrix(test[\"label\"], predictions)\n",
@@ -179,9 +303,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>predicted</th>\n",
+       "      <th>actual</th>\n",
+       "      <th>raw_count</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>fraud</td>\n",
+       "      <td>fraud</td>\n",
+       "      <td>10456</td>\n",
+       "      <td>0.915266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>fraud</td>\n",
+       "      <td>legitimate</td>\n",
+       "      <td>968</td>\n",
+       "      <td>0.084734</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>legitimate</td>\n",
+       "      <td>fraud</td>\n",
+       "      <td>58952</td>\n",
+       "      <td>0.096079</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>legitimate</td>\n",
+       "      <td>legitimate</td>\n",
+       "      <td>554624</td>\n",
+       "      <td>0.903921</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    predicted      actual  raw_count     value\n",
+       "0       fraud       fraud      10456  0.915266\n",
+       "1       fraud  legitimate        968  0.084734\n",
+       "2  legitimate       fraud      58952  0.096079\n",
+       "3  legitimate  legitimate     554624  0.903921"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df"
    ]
@@ -195,17 +392,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "cp.dump(lr, open(\"lr.pkl\", \"wb\"))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -219,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
