--- a/app/1_run_flask.ipynb
+++ b/app/1_run_flask.ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARNING: You are using pip version 21.3.1; however, version 22.0.4 is available.\n",
+      "You should consider upgrading via the '/opt/app-root/bin/python3.8 -m pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "!{sys.executable} -m pip install -r requirements.txt --quiet"
@@ -37,7 +46,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app 'wsgi.py' (lazy loading)\n",
+      " * Environment: development\n",
+      " * Debug mode: on\n",
+      " * Running on http://127.0.0.1:5000 (Press CTRL+C to quit)\n",
+      " * Restarting with watchdog (inotify)\n",
+      " * Debugger is active!\n",
+      " * Debugger PIN: 191-244-866\n",
+      "127.0.0.1 - - [07/Apr/2022 01:30:09] \"GET /status HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [07/Apr/2022 01:30:14] \"POST /predictions HTTP/1.1\" 200 -\n"
+     ]
+    }
+   ],
    "source": [
     "!FLASK_ENV=development FLASK_APP=wsgi.py flask run"
    ]
